tests/ui/higher-ranked/trait-bounds/rigid-equate-projections-in-higher-ranked-fn-signature.next.stderr
error[E0284]: type annotations needed: cannot satisfy `for<'a> <_ as Trait<'a>>::Assoc normalizes-to <T as Trait<'_>>::Assoc`
  --> $DIR/rigid-equate-projections-in-higher-ranked-fn-signature.rs:27:50
   |
LL |     let _: for<'a> fn(<_ as Trait<'a>>::Assoc) = foo::<T>();
   |                                                  ^^^^^^^^^^ cannot satisfy `for<'a> <_ as Trait<'a>>::Assoc normalizes-to <T as Trait<'_>>::Assoc`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0284`.
